--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	  <div class="panel-heading">Hungry Jacks</div>
 	  <div class="panel-body">
 		This package is a hungry jacks hack.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.asish.hungryjacks">More info</a>
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.asish.hungryjacks_01_iphoneos-arm">More info</a>
 	  </div>
 	</div>
 
